--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^0.14.2",
-    "grunt-shell": "^1.1.1"
+    "grunt-shell": "^1.1.1",
+    "node-sass": "^4.5.3"
   }
 }
