--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-sass": "^0.14.2",
-    "grunt-shell": "^1.1.1",
-    "node-sass": "^4.5.3"
+    "grunt-sass": "^2.0.0",
+    "grunt-shell": "^1.1.1"
   }
 }
