update template styles

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ pinterest: "#"
 instagram: "#"
 twitter: "#"
 facebook: "#"
-youtube: "#"
+youtube: "https://www.youtube.com/channel/UCW-4v-bHIbUqXVstXNYSv1Q"
 vimeo: "#"
 soundcloud: "#"
 
