--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ pinterest: "#"
 instagram: "#"
 twitter: "#"
 facebook: "#"
-youtube: "https://www.youtube.com/channel/UCW-4v-bHIbUqXVstXNYSv1Q"
+youtube: "#"
 vimeo: "#"
 soundcloud: "#"
 
@@ -119,3 +119,5 @@ prose:
           type: "text"
 # Gems
 gems: [jekyll-paginate]
+plugins:
+  - jekyll-sitemap
