--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,6 @@ prose:
           help: "Set post type to youtube in order for this to work. Do not set featured image, as the youtube video thumbnail will be used"
           type: "text"
 # Gems
-gems: [jekyll-paginate]
-      [jekyll-sitemap]
 plugins:
+  - jekyll-paginate
   - jekyll-sitemap
